# ransomwatch

./: .gitignore  netlify.toml  pyproject.toml
ransomwatch/: __init__.py  __main__.py  cli.py  config.py  database.py  defang.py  models.py  pdf_parser.py  scraper.py  search.py  stix_parser.py
tests/: test_database.py  test_defang.py  test_scraper.py
web/: app.js  build_data.py  data.json  index.html  style.css
